@@ -26,6 +26,7 @@ PLAYBOOK_VENV = 'playbook_venv'
 LOCAL_VENV = 'local_venv'
 INSTALLED_PACKAGES = 'installed_ansible_pyenv_packages'
 INSTALLED_COLLECTIONS = 'installed_galaxy_collections'
+INSTALLED_ROLES = 'installed_roles'
 ANSIBLE_TO_INSTALL = 'ansible==4.10.0'
 OPTION_HOST_CHECKING = 'ANSIBLE_HOST_KEY_CHECKING'
 OPTION_TASK_FAILED_ATTRIBUTE = 'ANSIBLE_INVALID_TASK_ATTRIBUTE_FAILED'
